--- a/material/_toc.yml
+++ b/material/_toc.yml
@@ -1,8 +1,10 @@
 # Table of contents
 # Learn more at https://jupyterbook.org/customize/toc.html
-- file: intro
-- part: Övningar
-  chapters:
+format: jb-book
+root: intro
+chapters:
+- file: ovningar/ovningar
+  sections:
   - file: ovningar/intro_1_jupyter_python
   - file: ovningar/intro_2_statistik_i_python
   - file: ovningar/guide_statistik_i_python
